# digital-filters

./: BSpline.py  BaseRational.py  Chebyshev.py  DiskRational.py  DiskRational2.py  DiskRationalOld.py  FilterOptimizer.py  README.md  Rational.py  Util.py  VecUtil.py  main.py
cpp/: CMakeLists.txt
cpp/src/: BLAS.cpp  BLAS.h  BSpline.h  Complex.h  DerivativeOptimizable.h  DiskRational.h  FilterOptimizer.cpp  FilterPeakFinder.cpp  GeneticAlgorithm.h  GeneticallyOptimizable.h  LineSearch.h  Optimizable.h  Polynomial.h  Util.h  VecUtil.h
